crates/reinhardt-pages/tests/ui/client_page/fail/non_page_return.rs
use reinhardt_pages::client_page;

#[client_page]
pub fn home_page() -> String {
	String::new()
}

fn main() {}
